--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.0",
   "license": "MIT",
   "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
-  "author": "Pan <panfree23@gmail.com>",
+  "author": "Dufy <dfy@dufangyu.com>",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "0.17.1",
     "element-ui": "2.3.4",
+    "file-save": "^0.2.0",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
@@ -43,8 +44,10 @@
     "eventsource-polyfill": "0.9.6",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "file-saver": "^1.3.8",
     "friendly-errors-webpack-plugin": "1.6.1",
     "html-webpack-plugin": "2.30.1",
+    "mockjs": "^1.0.1-beta3",
     "node-notifier": "5.1.2",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "3.2.0",
@@ -52,8 +55,10 @@
     "portfinder": "1.0.13",
     "postcss-import": "11.0.0",
     "postcss-loader": "2.0.9",
+    "pug": "^2.0.3",
     "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
+    "script-loader": "^0.7.2",
     "semver": "5.4.1",
     "shelljs": "0.7.8",
     "svg-sprite-loader": "3.5.2",
@@ -65,7 +70,8 @@
     "webpack": "3.10.0",
     "webpack-bundle-analyzer": "2.9.1",
     "webpack-dev-server": "2.9.7",
-    "webpack-merge": "4.1.1"
+    "webpack-merge": "4.1.1",
+    "xlsx": "^0.12.10"
   },
   "engines": {
     "node": ">= 4.0.0",
